# local-voice

./: .gitignore  Build-Desktop.cmd  Check-Runtime.cmd  MODEL_ARTIFACTS.md  README.md  Smoke-Memory.cmd  Start-Desktop.cmd  Start-Web.cmd  Stop-Assistant.cmd  backend_desktop_entry.py  index.html  package-lock.json  package.json
backend/: __init__.py  app.py  config.py  events.py  memory_service.py  memory_store.py  models.py  prompt.py  requirements.txt  services.py  telemetry.py
backend/adapters/: __init__.py  base.py  chroma.py  embedding.py  llama_cpp.py  openai_compatible.py  tts.py  vector_index.py  whisper.py
scripts/: build-backend.ps1  check-runtime.ps1  smoke-memory.ps1  smoke_memory.py  start-assistant.ps1  stop-assistant.ps1
src/: App.tsx  audio.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: default-settings.json
src-tauri/resources/backend-runtime/: placeholder.txt
src-tauri/src/: main.rs
src/hooks/: useAssistantSession.ts
