[package]
name = "local-voice-memory-assistant"
version = "0.1.0"
description = "Windows local voice assistant with markdown memory"
authors = ["OpenAI Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
